# MetaMark

./: .gitignore  README.md
.github/workflows/: core.yml  metamark-cli.yml  metamark-core.yml  rust.yml  test.yml
metamark/: Cargo.toml  README.md  package-lock.json  package.json
metamark-cli/: Makefile  README.md  version.mmk
metamark-cli/include/: cli.h
metamark-cli/src/: commands.c  main.c  utils.c
metamark-cli/tests/: test_commit.c  test_export.c  test_framework.c  test_framework.h  test_parse.c  test_runner.c
metamark-core/: CMakeLists.txt  Cargo.toml  Makefile  Makefile.win  README.md  build.bat  version.mmk
metamark-core/Release/: metamark-core.lib
metamark-core/include/: lexer.h  metamark.h  utils.h
metamark-core/src/: ast.c  ast.rs  error.rs  lexer.c  lexer.rs  lib.rs  metadata.c  metadata.rs  parser.c  parser.rs  tests.rs  utils.c
metamark-core/tests/: test_parser.c
metamark/examples/: hello.mmk
metamark/metamark-cli/: Cargo.toml
metamark/metamark-cli/src/: main.rs
metamark/metamark-core/: Cargo.toml
metamark/metamark-core/src/: ast.rs  document.rs  error.rs  lexer.rs  lib.rs  parser.rs  security.rs
metamark/metamark-core/src/tests/: mod.rs
metamark/metamark-editor/: .npmrc  Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
metamark/metamark-editor/src/: App.tsx  main.rs  main.tsx  styles.css
metamark/metamark-server/: Cargo.toml
metamark/metamark-server/src/: main.rs
metamark_editor/: README.md  pubspec.yaml
metamark_editor/lib/: app_theme.dart  main.dart
metamark_editor/lib/editor/: editor.dart
metamark_editor/lib/parser/: metamark_ffi.dart
metamark_editor/lib/preview/: preview.dart
metamark_editor/lib/theme/: app_theme.dart
metamark_editor/lib/utils/: file_utils.dart
metamark_editor/linux/: CMakeLists.txt
metamark_editor/linux/runner/: my_application.cc
metamark_editor/macos/Runner.xcodeproj/: project.pbxproj
metamark_editor/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
metamark_editor/macos/Runner/Configs/: AppInfo.xcconfig
metamark_editor/test/: widget_test.dart
metamark_editor/windows/: CMakeLists.txt
metamark_editor/windows/runner/: Runner.rc  main.cpp
