[package]
name = "metamark-core"
version = "0.1.0"
edition = "2021"
description = "Core parsing and representation library for MetaMark format"
authors = ["MetaMark Contributors"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
nom = "7.1"
logos = "0.13"

[dev-dependencies]
pretty_assertions = "1.4" 