[workspace]
members = [
    "metamark-core",
    "metamark-cli",
    "metamark-server",
    "metamark-editor"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MetaMark Team"]
description = "A modern document markup and collaboration system"
license = "MIT"

[workspace.dependencies]
# Parsing & Processing
nom = "7.1"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"

# Version Control & Diffing
git2 = "0.18"
similar = "2.4"

# Networking & Collaboration
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "9.2"

# Security & Encryption
ring = "0.17"
argon2 = "0.5"

# Serialization & Data Handling
serde_json = "1.0"
bincode = "1.3"

# Async Runtime & Utils
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
tokio-test = "0.4"
pretty_assertions = "1.4" 