[package]
name = "metamark-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for MetaMark"
license.workspace = true

[dependencies]
metamark-core = { path = "../metamark-core" }

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"

# Async Runtime
tokio = { workspace = true }

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Logging & Debug
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9" 