[package]
name = "metamark-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core library for MetaMark document processing"
license.workspace = true

[dependencies]
# Parsing & Processing
nom.workspace = true
pulldown-cmark.workspace = true
serde = { workspace = true }
serde_yaml.workspace = true
toml.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Error Handling & Utils
thiserror.workspace = true
anyhow.workspace = true

# Async Runtime
tokio = { workspace = true }
async-trait.workspace = true

# Serialization
serde_json.workspace = true
bincode.workspace = true
base64 = "0.21"

# Security
ring.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio-test.workspace = true
tempfile = "3.10" 