[package]
name = "metamark-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "GUI editor for MetaMark documents"
license.workspace = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
metamark-core = { path = "../metamark-core" }

# Tauri
tauri = { version = "1.5", features = ["shell-open", "dialog"] }
serde = { workspace = true }
serde_json = { workspace = true }
window-shadows = "0.2"

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async Runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"] 